# haskellbook

./: .gitignore  README.md
chapter01-all-you-need-is-lambda/: beta-reduce.txt  combinators.txt  equivalence-exercises.txt  normal-form-or-diverge.txt
chapter02-hello-haskell/: .a-head-code.hs.swp  .chapter-exercise.hs.swp  .comprehension-check.hs.swp  .function-with-let.hs.swp  .function-with-where.hs.swp  .heal-the-sick.hs.swp  .learn.hs.swp  .test.hs.swp  .triple.hs.swp  a-head-code.hs  chapter-exercise.hs  comprehension-check.hs  function-with-let.hs  function-with-where.hs  learn.hs
chapter03-strings/: Reverse.hs  chapterexercises.hs  chapterexercises.txt  print3broken.hs  print3flipped.hs  toporlocal.hs
chapter04-basic-datatypes/: chapterexercises.hs  findthemistakes.txt  mood-swing.hs
chapter05-types/: applyyourself.hs  chapterexercises.hs  parametricity.hs  typearguments.txt  typematching.txt
chapter06-typeclasses/: chapterexercises.hs  date.hs  eqinstances.hs  identity.hs  trivial.hs  willtheywork.txt
chapter07-more-functional-patterns/: arith2.hs  artfuldodgy.hs  casepractice.hs  chapterexercises.hs  company.hs  grapbag.hs  guardduty.hs  matchingTuples1.hs  penguins.hs  registeredUser1.hs  varietypack.hs
chapter08-recursion/: chapterexercises.hs  recursion.hs
chapter09-lists/: bottommadness.hs  chapterexercises.hs  enumfromto.hs  filtering.hs  morebottoms.hs  squarecube.hs  thyfearfulsymmetry.hs  zipping.hs
chapter10-folding-lists/: chapterexercises.hs  databaseprocessing.hs  scansexercises.hs  understandingfolds.hs
chapter11-algebraic-datatypes/: binarytree.hs  chapterexercises.hs  dogtypes.hs  goats.hs  howdoesyourgardengrow.hs  programmers.hs  thequads.hs  vehicles.hs
chapter12-signaling-adversity/: chapterexercises.hs  eitherlib.hs  maybelib.hs  unfolds.hs
chapter13-building-projects/: palindrome.hs  person.hs
chapter13-building-projects/ciphers/: ciphers.cabal
chapter13-building-projects/ciphers/src/: Main.hs
chapter13-building-projects/hangman/: hangman.cabal
chapter13-building-projects/hangman/src/: Main.hs
chapter13-building-projects/hello/: LICENSE  hello.cabal
chapter13-building-projects/hello/app/: Main.hs
chapter13-building-projects/hello/src/: Dogs.hs  Hello.hs
chapter14-testing/addition/: Addition.hs  addition.cabal
chapter14-testing/exercises/: exercises.cabal
chapter14-testing/exercises/src/: Main.hs
chapter14-testing/morse/: morse.cabal
chapter14-testing/morse/src/: Main.hs  Morse.hs
chapter15-monoid-semigroup/: madlibbin.hs  optionalmonoid.hs
chapter15-monoid-semigroup/exercises/: LICENSE  exercises.cabal  stack.yaml
chapter15-monoid-semigroup/exercises/src/: Main.hs
chapter16-functor/: chapterexercises.hs  heavylifting.hs  possibly.hs
chapter16-functor/instances/: README.md  instances.cabal
chapter16-functor/instances/src/: Instances.hs
chapter16-functor/instances/test/: Test.hs
chapter17-applicative/: chapterexercises.hs  constant.hs  fixerupper.hs  identity.hs  lookups.hs  validation.hs
chapter17-applicative/badmonoid/: README.md  badmonoid.cabal
chapter17-applicative/badmonoid/src/: Main.hs
chapter17-applicative/listapplicative/: README.md  listapplicative.cabal
chapter17-applicative/listapplicative/src/: Main.hs
chapter18-monad/: bind.hs  chapterexercises.hs  eithermonad.hs
chapter20-foldable/: chapterexercises.hs  library.hs
chapter21-traversable/: chapterexercises.hs
chapter22-reader/: ask.hs  chapterexercises.hs  readermonad.hs  reading.hs  start.hs  warmingup.hs
chapter23-state/: ChapterExercises.hs  FizzBuzz.hs  Moi.hs  RandomExample.hs  RandomExample2.hs
chapter24-parser-combinators/: AltParsing.hs  Backtracking.hs  Fractions.hs  FractionsPolymorphic.hs  Graphviz.hs  IPvX.hs  Ini.hs  Integer.hs  LearnParsers.hs  Log.hs  Marshalling.hs  PhoneNumber.hs  SemVer.hs  TryTry.hs
chapter25-composing-types/: Bifunctor.hs  IdentityCompose.hs  IdentityT.hs
chapter26-monad-transformers/: ChapterExercises.hs  EitherT.hs  FixTheCode.hs  HitCounter.hs  MaybeT.hs  OuterInner.hs  ReaderT.hs  Scotty.hs  StateT.hs
chapter26-monad-transformers/morra/: morra.cabal
chapter26-monad-transformers/morra/src/: Main.hs
chapter27-nonstrictness/: CoreDump.hs  ManualBang.hs  OutsideIn.hs  StrictList.hs  StrictListPragma.hs  StrictTest.hs  Trace.hs
