name:                ciphers
version:             0.1.0.0
homepage:            https://github.com/mrtnrau/haskelltraining#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Rau
maintainer:          martin.rau@tum.de
copyright:           MIT
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ciphers
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
