name:                hello
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Martin Rau
maintainer:          martin.rau@tum.de
copyright:           2017 Martin Rau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hello-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hello
  default-language:    Haskell2010

test-suite hello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hello
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
