name:                exercises
version:             0.1.0.0
author:              Martin Rau
maintainer:          martin.rau@tum.de
copyright:           MIT
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10

executable exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
