name:                badmonoid
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Martin Rau
maintainer:          mrtn.rau@googlemail.com
copyright:           2017 Martin Rau
category:            Unclassified
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable badmonoid
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010
