name:                morra
version:             0.1.0.0
homepage:            https://github.com/mrtnrau/haskellbook#readme
license:             BSD3
author:              Martin Rau
maintainer:          mrtn.rau@googlemail.com
copyright:           2017 Martin Rau
category:            Unclassified
build-type:          Simple
cabal-version:       >=1.10

executable morra
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.0 && < 2
                     , transformers >= 0.5.0.0 && < 0.6.0.0
                     , here >= 1.2.0 && < 1.3.0
